--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.servlet.context-path=/api/v1
 spring.jpa.database=h2
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 ddl-auto=create-drop
+
+rate-limit.client-limit=${RATE_LIMIT_CLIENT_LIMIT:10}
+rate-limit.client-reset=${RATE_LIMIT_CLIENT_RESET:30}
+rate-limit.participant-limit=${RATE_LIMIT_CLIENT_LIMIT:5}
+rate-limit.participant-reset=${RATE_LIMIT_CLIENT_RESET:30}
